--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "cdbreact": "^1.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
+    "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
   },
